// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Simple CardHeader matches snapshot. 1`] = `
<div
  className="card__header"
>
  <div
    className="avatar"
  >
    <div
      className="avatar__intro"
    >
      <h4
        className="avatar__name"
      >
        t
      </h4>
    </div>
  </div>
</div>
`;

exports[`Simple CardHeader with subheader matches snapshot. 1`] = `
<div
  className="card__header"
>
  <div
    className="avatar"
  >
    <div
      className="avatar__intro"
    >
      <h4
        className="avatar__name"
      >
        t
      </h4>
      <small
        className="avatar__subtitle"
      >
        s
      </small>
    </div>
  </div>
</div>
`;
